--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -10,3 +10,9 @@
     color:var(--text-primary);
     font-weight: bold;
 }
+
+@media only screen and (max-width: 600px) {
+    .footer {
+        display: none;
+    }
+}
