--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,7 +4,7 @@
     justify-content: flex-end;
     align-items: center;
     background-color: var(--bg-secondary);
-    width: 100%;
+    width: 100vw;
     height: 5rem;
 }
 
