--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -2,7 +2,7 @@
     position: fixed;
     z-index: 1;
     background-color: var(--bg-primary);
-    transition: width var(--transition-speed) ease;
+    transition: width var(--transition-speed-slow) ease;
 }
 
 .navbar-nav {
@@ -30,7 +30,7 @@
     color: var(--text-primary);
     text-decoration: none;
     filter: grayscale(100%) opacity(0.7);
-    transition: var(--transition-speed);
+    transition: var(--transition-speed-slow);
 }
 
 .nav-link:hover {
@@ -51,7 +51,7 @@
 }
 
 .fa-primary {
-    color: #ff7eee;
+    color: var(--cp-400);
 }
 
 .fa-secondary {
@@ -60,7 +60,7 @@
 
 .fa-primary,
 .fa-secondary {
-    transition: var(--transition-speed);
+    transition: var(--transition-speed-slow);
 }
 
 .logo {
@@ -77,7 +77,7 @@
 
 .logo svg {
     transform: rotate(0deg);
-    transition: var(--transition-speed);
+    transition: var(--transition-speed-slow);
 }
 
 .logo-text
@@ -85,7 +85,7 @@
     display: inline;
     position: absolute;
     left: -999px;
-    transition: var(--transition-speed);
+    transition: var(--transition-speed-slow);
 }
 
 .navbar:hover .logo svg {
