--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,39 @@
 
 :root {
     font-size: 16px;
-    font-family: 'Open Sans';
+    font-family: Open Sans;
+    --btn-font-family: Inter var,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
     --text-primary: #b6b6b6;
     --text-secondary: #ececec;
     --bg-primary: #23232e;
     --bg-secondary: #141418;
+    --bg-default: #f1f5f9;
+    --text-default: #1e293b;
     --transition-speed-slow: 600ms;
     --transition-speed-fast: 300ms;
-    --cp-100: #D9E9FF;
-    --cp-200: #B8D7FF;
-    --cp-300: #99C5FF;
-    --cp-400: #79B2FC;
-    --cp-500: #589FFC;
-    --cp-600: #3E8EF7;
-    --cp-700: #247CF0;
-    --cp-800: #0B69E3;
+    --primary-50: #eef2ff;
+    --primary-50-rgb: 238,242,255;
+    --primary-100: #e0e7ff;
+    --primary-100-rgb: 224,231,255;
+    --primary-200: #c7d2fe;
+    --primary-200-rgb: 199,210,254;
+    --primary-300: #a5b4fc;
+    --primary-300-rgb: 165,180,252;
+    --primary-400: #818cf8;
+    --primary-400-rgb: 129,140,248;
+    --primary-500: #6366f1;
+    --primary-500-rgb: 99,102,241;
+    --primary-600: #4f46e5;
+    --primary-600-rgb: 79,70,229;
+    --primary-700: #4338ca;
+    --primary-700-rgb: 67,56,202;
+    --primary-800: #3730a3;
+    --primary-800-rgb: 55,48,163;
+    --primary-900: #312e81;
+    --primary-900-rgb: 49,46,129;
+    --primary: #4f46e5;
+    --primary-rgb: 79,70,229;
+
 }
 
 body {
@@ -41,9 +59,6 @@ body::-webkit-scrollbar-thumb {
 main {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    margin: 0;
-    height: 100vh;
     width: 100%;
 }
 
@@ -52,7 +67,7 @@ h1 {
     padding: 0;
 }
 
-input {
+.input {
     color: #373737;
     background: #fff;
     border: 1px solid #CCCCCC;
@@ -66,18 +81,18 @@ input {
 }
 
 main span {
-    color: var(--cp-700);
+    color: var(--text-default);
     font-size: 18px;
 }
 
-main a[class*="form-button"] {
+.link-button {
     display: inline-block;
     text-decoration: none;
     text-align: center;
     border-radius: 5px;
-    border: 1px solid #CCCCCC;
-    background: var(--bg-primary);
-    color: var(--cp-400);
+    border: 0 solid;
+    background: var(--primary-600);
+    color:white;
     font-size: 16px;
     width: max-content;
     margin-right: 10px;
@@ -86,7 +101,7 @@ main a[class*="form-button"] {
     transition: var(--transition-speed-fast);
 }
 
-select {
+.select {
     color: #373737;
     background: #fff;
     border: 1px solid #CCCCCC;
@@ -98,12 +113,10 @@ select {
     height: 30px;
 }
 
-button[class = "save"] {
-    border-radius: 5px;
-    border: 1px solid #CCCCCC;
-    background: var(--bg-primary);
-    color: var(--cp-400);
-    font-size: 16px;
+.button{
+    font-size: 14px;
+    font-family:var(--btn-font-family);
+    font-weight: 500;
     width: 100px;
     height: 40px;
     margin-right: 10px;
@@ -111,21 +124,68 @@ button[class = "save"] {
     transition: var(--transition-speed-fast);
 }
 
-button[class = "save"]:hover {
-    background: var(--bg-secondary);
-    color: var(--cp-600);
-    box-shadow: 5px 5px 6px rgba(4, 129, 177, 0.9)
+.primary-button{
+    background: var(--primary-600);
+    color: white;
+}
+
+.save-button{
+    border-radius: 20px;
+    border: 0 solid;
+}
+
+.save-button:hover {
+    background: var(--primary-700);
+}
+
+.plus-button{
+    border-radius: 50%;
+    border: 0 solid;
+    width: 40px;
+    height: 40px;
+}
+
+.plus-button:hover{
+    background: var(--primary-700);
 }
 
 .form{
     display: flex;
     flex-direction: column;
-    background: var(--cp-100);
-    border: 1px solid var(--cp-100);
-    border-radius: 4px;
+    background-color: white;
+    box-shadow: 0 0 #0000,0 0 #0000,0 0 #0000,0 0 #0000,0 1px 3px 0 #0000001a,0 1px 2px 0 #0000000f!important;
+    border: 0 solid;
+    border-radius: .25rem;
     padding: 25px 25px 40px;
     box-sizing: border-box;
     width: 100%;
+}
+
+.form-header {
+    padding: 5px;
+    font-size: 25px;
+    color: var(--bg-default);
+    background: var(--bg-primary);
+    border: 1px solid var(--bg-primary);
+    border-radius: 4px;
+    box-shadow: 3px 3px 6px rgba(4, 129, 177, 0.5);
+}
+
+.form .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.normal-size{
+    width: 40vw;
+}
+
+@media only screen and (max-width: 600px) {
+    .form .normal-size{
+        width: 90vw;
+    }
 }
 
 .right{
