--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,16 +1,16 @@
 .children{
-    margin-left: 5rem;
-    margin-top: 5rem;
     padding: 1rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    margin-top:5rem;
+    background-color: var(--bg-default);
+    height: 100%;
 }
 
 .layout{
     display: flex;
-    flex-direction: row;
 }
 
 @media only screen and (max-width: 600px) {
